corpus/c/thread_safety/case-01/snapshots/gcc15_plus/dual_sink_structured/render.ci.txt
src/main.c:7:5: error: thread safety or atomic operation error
help: ensure the type is trivially copyable for atomic operations or fix the thread_local linkage
why: operand type ‘struct Blob *’ is incompatible with argument 1 of ‘__atomic_store_n’
| src/main.c:7:5
|     __atomic_store_n(&blob, blob, __ATOMIC_SEQ_CST);
|     ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output